@@ -88,5 +88,10 @@ cameradegreespersecond = 180
 metaserver=metaserver.worldforge.org
 
 [general]
+#if false, the startup help window won't be shown
 startuphelp=true
+#determines how many milliseconds to wait between updates of the avatar's rotation is sent to the server
+#this is not done instantly to prevent swamping of data to the server
+#set this lower if you experience too jerky game play
+avatarrotationupdatefrequency=1000
 
